
[package]
name = "mca"
description = "Parse Minecraft region files"
version = "0.2.1"
edition = "2021"
license = "MIT"
authors = ["VilleOlof"]
readme = "README.md"
repository = "https://github.com/VilleOlof/mca"
homepage = "https://github.com/VilleOlof/mca"
keywords = ["minecraft", "region", "mca", "parser", "chunk"]
categories = ["game-development", "parsing"]

[dependencies]
thiserror = "1.0"
miniz_oxide = { version = "0.7.4", features = ["std"] }
lz4_flex = "0.11.3"

[dev-dependencies]
criterion = "0.5.1"
mca-parser = "1.0.2"

[[bench]]
name = "region_parsing"
harness = false

[features]
unsafe = []
