[package]
name = "mca"
description = "Read / Write Minecraft Region Files (mca)"
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["VilleOlof"]
readme = "README.md"
repository = "https://github.com/VilleOlof/mca"
homepage = "https://github.com/VilleOlof/mca"
keywords = ["minecraft", "region", "mca", "parser", "chunk"]
categories = ["game-development", "parsing"]

[dependencies]
lz4-java-wrc = "0.2"
miniz_oxide = { version = "0.8", features = ["std"] }
thiserror = "2"

[dev-dependencies]
criterion = "0.5"
mca-parser = "1"
sculk = "0.2"
simdnbt = "0.7"

[[bench]]
name = "region_parsing"
harness = false

[features]
unsafe = []
